--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+html {
+  --scroll-behavior: smooth!important;
+  scroll-behavior: smooth!important;
+  }
 ::-webkit-scrollbar {
   width: 10px; /* Width of the scrollbar */
 }
@@ -19,3 +23,24 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #EE9B8D; /* Thumb color on hover */
 }
+
+body {
+  @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+}
+h1,h2,h3,h4,h5,h6{
+  @apply font-bold
+}
+h1{
+  @apply text-4xl sm:text-5xl md:text-6xl
+}
+h2{
+  @apply text-3xl sm:text-4xl
+}
+li{
+  @apply cursor-pointer
+}
+
+button{
+  @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
+}
+
