--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,17 +27,17 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background: #EEE9DD; /* Track color */
+  background: var(--body_background); /* Track color */
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #EEE9DD; /* Thumb color */
+  background: var(--body_background); /* Thumb color */
   border-radius: 5px; /* Border radius of the thumb */
-  border: 2px solid #EE9B8D; /* Border color of the thumb */
+  border: 2px solid #7BD3EA; /* Border color of the thumb */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #EE9B8D; /* Thumb color on hover */
+  background: #89CFF3; /* Thumb color on hover */
 }
 
 body {
