--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@ li{
 }
 
 button{
-  @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
+  @apply shadow-lg shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#59fff7] to-[#0f73d8] text-white
 }
 
 .dark_mode {
