--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #89CFF3; /* Thumb color on hover */
+  background: #a7eaf5; /* Thumb color on hover */
 }
 
 body {
