--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,4 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";  
-
+@import "tailwindcss";
 
 [data-theme="light"]{
   --body_background: #ecf0f3;
